applications/namespaces/default/jellyfin/jelly.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: jelly
    name: jelly
    namespace: default
spec:
    serviceName: jelly
    replicas: 1
    revisionHistoryLimit: 3
    podManagementPolicy: Parallel
    selector:
        matchLabels:
            app: jelly
    template:
        metadata:
            labels:
                app: jelly
        spec:
            automountServiceAccountToken: true
            containers:
                - securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                      privileged: false
                      readOnlyRootFilesystem: false
                      runAsGroup: 997
                      runAsNonRoot: true
                      runAsUser: 998
                  image: jellyfin/jellyfin:10.11.5@sha256:6d819e9ab067efcf712993b23455cc100ee5585919bb297ea5a109ac00cb626e
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /health
                          port: 8096
                          scheme: HTTP
                      initialDelaySeconds: 15
                      periodSeconds: 10
                      successThreshold: 1
                      timeoutSeconds: 2
                  name: jelly
                  ports:
                      - containerPort: 8096
                        name: http
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /health
                          port: 8096
                          scheme: HTTP
                      initialDelaySeconds: 1
                      periodSeconds: 10
                      successThreshold: 1
                      timeoutSeconds: 2
                  resources:
                      limits:
                          memory: 4Gi
                      requests:
                          cpu: "1"
                          memory: 2Gi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  volumeMounts:
                      - mountPath: /config
                        mountPropagation: None
                        name: config
                      - mountPath: /media
                        mountPropagation: None
                        name: media
                      - mountPath: /cache
                        name: cache
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            nodeSelector:
                kubernetes.io/hostname: "worker-one"
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext:
                fsGroup: 997
                supplementalGroups:
                  - 105
                fsGroupChangePolicy: OnRootMismatch
                seccompProfile:
                  type: RuntimeDefault
            shareProcessNamespace: false
            runtimeClassName: nvidia
            terminationGracePeriodSeconds: 30
            tolerations:
                - effect: NoExecute
                  key: node.kubernetes.io/not-ready
                  operator: Exists
                  tolerationSeconds: 60
                - effect: NoExecute
                  key: node.kubernetes.io/unreachable
                  operator: Exists
                  tolerationSeconds: 60
            volumes:
                - persistentVolumeClaim:
                    claimName: jelly-config-zfs
                  name: config
                - name: media
                  persistentVolumeClaim:
                      claimName: media-pvc-zfs
    volumeClaimTemplates:
        - metadata:
            name: cache
          spec:
            accessModes:
                - ReadWriteOnce
            resources:
                requests:
                    storage: 20Gi
            storageClassName: openebs-zfspv-nvme-generic
            volumeMode: Filesystem
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: jelly
    name: jelly
    namespace: default
spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
        - IPv4
    ipFamilyPolicy: SingleStack
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: http
    selector:
        app: jelly
    sessionAffinity: None
    type: ClusterIP
