applications/namespaces/default/jellyfin/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: jelly
  ingress:
    - fromEndpoints:
        - {}
  egressDeny:
    - toCIDR:
        - "192.168.0.0/16"
  egress:
    - toFQDNs:
        - matchPattern: "*.jellyfin.org"
        - matchName: "jellyfin.org"
        - matchPattern: "*.opensubtitles.org"
        - matchName: "opensubtitles.org"
        - matchName: "api.trakt.tv"
        - matchName: "api.thetvdb.com"
        - matchName: "api.themoviedb.org"
        - matchName: "image.tmdb.org"
        - matchName: "www.omdbapi.com"
        - matchName: "www.thetvdb.com"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
